# nifty-gallery

./: .fleek.json  .gitignore  Cargo.toml  index.html  ipfs-404.html  readme.md
.cargo/: config.toml
assets/: animate.js  style.css
bulma/: .gitignore  Cargo.toml  package.json
bulma/assets/: bulma-carousel.min.js  bulma-collapsible.min.js  bulma-toast.min.js
bulma/src/: carousel.rs  collapsible.rs  lib.rs  toast.rs
src/: agents.rs  cache.rs  components.rs  config.rs  lib.rs  main.rs  metadata.rs  models.rs  notifications.rs  storage.rs  uri.rs
src/components/: address.rs  explorers.rs  mod.rs  token.rs
src/components/collection/: mod.rs  token.rs
src/components/explorers/: address.rs  collection.rs  mod.rs
workers/: Cargo.toml
workers/src/: etherscan.rs  lib.rs  qr.rs
workers/src/metadata/: json.rs  mod.rs
