[package]
name = "nifty-gallery"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gloo-console = "0.2.1"
gloo-net = "0.2.0"
itertools = "0.10.3"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
url = "2.2.2"
web-sys = "0.3.57"
yew = "0.19.3"
yew-router = "0.16.0"
yew-router-qs = { git = "https://github.com/evilrobotindustries/yew-router-qs" }