[package]
name = "nifty-gallery"
version = "0.1.0"
edition = "2021"

[profile.release]
# less code to include into binary
panic = 'abort'
# optimization over all codebase ( better optimization, slower build )
codegen-units = 1
# optimization for size ( more aggressive )
opt-level = 'z'
# optimization for size
# opt-level = 's'
# link time optimization using using whole-program analysis
lto = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.13.0"
chrono = { version = "0.4.19", features = ["serde", "wasmbind"] }
ethabi = "17.0.0"
gloo-net = "0.2.0"
gloo-storage = "0.2.1"
gloo-worker = { version = "0.1.0", features = ["futures"] }
gloo-timers = "0.2.4"
hex = "0.4.3"
itertools = "0.10.3"
log = "0.4.17"
qrcode-generator = "4.1.6"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
url = "2.2.2"
wasm-bindgen = "0.2.80"
wasm-logger = "0.2.0"
web-sys = { version = "0.3.57", features = ["HtmlInputElement", "Location"] }
wee_alloc = "0.4.5"
yew = { path = "../yew/packages/yew", features = ["csr"] }
yew-agent = { path = "../yew/packages/yew-agent" }
yew-router = { path = "../yew/packages/yew-router" }
yew-router-qs = { git = "https://github.com/evilrobotindustries/yew-router-qs" }

etherscan = { path = "../etherscan" }
bulma = { path = "bulma" }