[package]
name = "nifty-gallery"
version = "0.1.0"
edition = "2021"

[profile.release]
panic = 'abort' # less code to include into binary
codegen-units = 1 # optimization over all codebase ( better optimization, slower build )
opt-level = 'z' # optimization for size ( more aggressive )
lto = true # link time optimization using using whole-program analysis

[dependencies]
base64 = "0.13.0"
bulma = { path = "bulma" }
chrono = { version = "0.4.19", features = ["serde", "wasmbind"] }
console_error_panic_hook = "0.1.7"
gloo-net = "0.2.0"
gloo-storage = "0.2.1"
gloo-timers = "0.2.4"
hex = "0.4.3"
indexmap = { version = "1.9.0", features = ["serde"] }
itertools = "0.10.3"
log = "0.4.17"
once_cell = "1.12.0"
serde = { version = "1.0.137", features = ["derive"] }
wasm-bindgen = "0.2.80"
wasm-logger = "0.2.0"
web-sys = { version = "0.3.58", features = ["HtmlInputElement", "Location"] }
wee_alloc = "0.4.5"
workers = { path = "workers" }
yew = "0.19.3"
yew-router = "0.16.0"
yew-router-qs = { git = "https://github.com/evilrobotindustries/yew-router-qs" }