[package]
name = "bulma"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gloo-console = "0.2.1"
wasm-bindgen = "0.2.80"
web-sys = { version = "0.3.57", features = [
    "Document",
    "DomTokenList",
    "Element",
    "HtmlCollection",
    "KeyboardEvent",
    "NodeList",
] }