[package]
name = "bulma"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gloo-console = "0.2.1"
serde = { version = "1.0.137", features = ["derive"] }
wasm-bindgen = { version = "0.2.80", features = ["serde-serialize"] }
web-sys = { version = "0.3.57", features = [
    "Document",
    "DomTokenList",
    "Element",
    "HtmlCollection",
    "KeyboardEvent",
    "NodeList",
] }