[package]
name = "workers"
version = "0.1.0"
edition = "2021"

[profile.release]
panic = 'abort' # less code to include into binary
codegen-units = 1 # optimization over all codebase ( better optimization, slower build )
opt-level = 'z' # optimization for size ( more aggressive )
lto = true # link time optimization using using whole-program analysis

[dependencies]
async-recursion = "1.0.0"
base64 = "0.13.0"
ethabi = "17.0.0"
etherscan = { path = "../../etherscan" }
gloo-net = "0.2.0"
gloo-worker = { version = "0.1.0", features = ["futures"] }
gloo-timers = "0.2.4"
gloo-utils = "0.1.3"
hex = "0.4.3"
js-sys = "0.3.58"
log = "0.4.17"
once_cell = "1.12.0"
qrcode-generator = "4.1.6"
serde = "1.0.137"
serde_json = "1.0.81"
wasm-bindgen = "0.2.81"
wasm-bindgen-futures = "0.4.31"
wasm-logger = "0.2.0"
web-sys = { version = "0.3.58", features = ["DedicatedWorkerGlobalScope", "Headers", "Request", "RequestInit"] }
url = { version = "2.2.2", features = ["serde"] }